@@ -61,15 +61,40 @@ class SeqString:
     False
     >>> a>b
     True
+
+    By default, all numbers are treated as unsigned numbers. The constructor
+    argument *signedNums* can be used to change this behavior. The value
+    can either be a boolean to turn all numbers into signed numbers which means
+    any preceding minus sign will be considered to be part of the number or
+    you may pass a list of indices to only turn certain numbers into signed
+    numbers. The indices may also be negative if you want to count from the
+    end. For example, setting *signedNums* to ``[-1]`` will only turn the
+    last number (which often is the frame number when dealing with file names)
+    into a signed number and leave all other numbers unsigned.
+    
+    >>> s=SeqString("sequence-2.-012.tif")
+    >>> s.getNums()
+    [2, 12]
+    >>> s=SeqString("sequence-2.-012.tif", signedNums=True)
+    >>> s.getNums()
+    [-2, -12]
+    >>> s=SeqString("sequence-2.-012.tif", signedNums=[-1])
+    >>> s.getNums()
+    [2, -12]
     """
     
-    def __init__(self, s=None):
+    def __init__(self, s=None, signedNums=None):
         """Constructor.
 
         The sequence string is initialized with s which can be a regular 
         string, another SeqString or anything else that can be turned into
         a string using str(s). s can also be None which is equivalent
         to an empty string.
+        signedNum is either a boolean that can be used to turn all numbers
+        into signed numbers or it may be a list containing the indices of
+        the numbers that should be treated as signed numbers. An index may
+        also be negative to count from the end. By default, all numbers
+        are unsigned.
         """
         # This is an alternating sequence of text and number values
         # (always beginning and ending with a text (which might both be empty)).
@@ -80,7 +105,20 @@ class SeqString:
         # Example: 'anim1_0001.png' -> ['anim', (1,1), '_', (1,4), '.png']
         self._value = [""]
         self._initSeqString(s)
-
+        
+        if signedNums is not None:
+            if type(signedNums) is bool:
+                if signedNums:
+                    for i in range(self.numCount()):
+                        self._toSignedNum(i)
+            elif type(signedNums) is list:
+                for idx in signedNums:
+                    if type(idx) is not int:
+                        raise TypeError("The items inside the 'signedNums' list must be integers.")
+                    self._toSignedNum(idx)
+            else:
+                raise TypeError("Argument 'signedNums' must be a boolean or a list of integers.")
+    
     def __repr__(self):
         return "'%s'"%self.__str__()
 
@@ -231,6 +269,28 @@ class SeqString:
             res.append("")
 
         self._value = res
+
+    def _toSignedNum(self, idx):
+        """Turn a number into a signed number.
+        
+        If the number is preceded by a '-' character, that character is removed
+        from the string part and the number is negated.
+        idx is the index of the number. The index may also be negative.
+        An IndexError exception is thrown if the index is out of range. 
+        """
+        if idx<0:
+            idx = self.numCount()+idx
+        if idx<0 or idx>=self.numCount():
+            raise IndexError("index out of range")
+        
+        idx *= 2
+        strVal = self._value[idx]
+        if strVal.endswith("-"):
+            # Negate the value following the string
+            numTup = self._value[idx+1]
+            self._value[idx+1] = (-numTup[0], numTup[1]+1)
+            # Remove the '-' from the string
+            self._value[idx] = strVal[:-1]
 
     def match(self, template, numPos=None):
         """Check if one sequence string is equal to another except for one or all numbers.
@@ -677,7 +737,7 @@ class Sequence:
             name = SeqString(name)
 
         if not self.match(name):
-            placeholder,ranges = self.sequenceName()
+            placeholder,_ranges = self.sequenceName()
             raise ValueError("Cannot add '%s' to sequence %s. The name doesn't match the sequence."%(name, placeholder))
 
         if obj is not None:
@@ -721,7 +781,7 @@ class Sequence:
         are given in the same order as the corresponding number appears in
         the names.
         """
-        name,rangeStrs = self._nameAndRangeStrs()
+        _name,rangeStrs = self._nameAndRangeStrs()
         return list(map(lambda x: Range(x), rangeStrs))
 
     def sequenceName(self):
@@ -983,7 +1043,7 @@ class Range:
           >>> Range("1-").isInfinite()
           True
         """
-        for begin,end,step in self._ranges:
+        for _begin,end,_step in self._ranges:
             if end is None:
                 return True
             
@@ -1595,7 +1655,6 @@ class OutputNameGenerator:
                 dstName = self._dstName
         
             # Create the src,dst pairs...
-            seqFileTable = []
             for src,dst in self._iterNames(srcSeq, dstName, srcRange, self._dstRangeIter,
                                            self._enforceDstRange, self._repeatSrc, self._keepExt):
                 yield (src,dst)
@@ -1716,7 +1775,6 @@ class OutputNameGenerator:
         # The index of the number that varies most (i.e. the index of the sequence number)
         seqNumIdx = fileSequence.sequenceNumberIndex()
     
-        numIdxs = []
         numValues = len(ranges)
         numVaryingValues = len(list(filter(lambda rng: len(rng)>1, ranges)))
         
@@ -1846,7 +1904,6 @@ class _SequenceProcessor:
             srcDict[srcName] = 1
             
         dstFiles = map(lambda t: t[1], self._fileTab)
-        overwrites = []
         for dstName in dstFiles:
             if dstName not in srcDict and os.path.exists(dstName):
                 yield dstName
@@ -2170,7 +2227,7 @@ class SymLinkSequence(CopySequence):
         os.symlink(src, dst)
 
 
-def buildSequences(names, numPos=None, assumeFiles=False, nameFunc=None):
+def buildSequences(names, numPos=None, assumeFiles=False, nameFunc=None, signedNums=None):
     """Create sorted sequences from a list of names/objects.
     
     *names* is a list of objects (usually strings) that are grouped into sequences.
@@ -2188,16 +2245,22 @@ def buildSequences(names, numPos=None, assumeFiles=False, nameFunc=None):
     The function has to return the actual name of that object. This can
     be used if the input list contains objects that are not strings but
     some other (compound) objects.
-    
+
+    *signedNum* is either a boolean that can be used to turn all numbers
+    into signed numbers or it may be a list containing the indices of
+    the numbers that should be treated as signed numbers. An index may
+    also be negative to count from the end. By default, all numbers
+    are unsigned.
+
     Returns a list of :class:`Sequence<cgkit.sequence.Sequence>` objects.
     The sequences and the files within the sequences are sorted.
     """
     # Create the objects list which contains 2-tuples (seqString,obj).
     # obj is the original object from the "names" list or None.
     if nameFunc is None:
-        objects = map(lambda name: (SeqString(name),None), names)
+        objects = map(lambda name: (SeqString(name,signedNums=signedNums),None), names)
     else:
-        objects = map(lambda obj: (SeqString(nameFunc(obj)),obj), names)
+        objects = map(lambda obj: (SeqString(nameFunc(obj),signedNums=signedNums),obj), names)
     # Sort the objects according to their seqString
     # The order of the result is already so that members of the same
     # sequence are together, we just don't know yet where a sequence ends
@@ -2220,10 +2283,11 @@ def _buildSequences(objects, numPos=None, assumeFiles=False):
         # Are we dealing with file names? Then freeze directory numbers...
         if assumeFiles:
             path,n = os.path.split(str(name))
+            # The signedNums flag is irrevelant for freezing numbers
             pathseq = SeqString(path)
             # n: The number count in the path (these numbers have to be frozen)
             n = pathseq.numCount()
-            for i in range(n):
+            for dummy in range(n):
                 name.replaceNum(0, name.getNumStr(0))
             
         sequenceSplit = False
@@ -2344,13 +2408,19 @@ def compactRange(values):
                 
     return ",".join(rs)
 
-def glob(name):
+def glob(name, signedNums=None):
     """Create file sequences from a name pattern.
     
     *name* is a file pattern that will get a ``'*'`` appended. The pattern is then
     passed to the regular :func:`glob()` function from the standard :mod:`glob`
     module to obtain a list of files which are then grouped into sequences.
-    
+
+    *signedNum* is either a boolean that can be used to turn all numbers
+    into signed numbers or it may be a list containing the indices of
+    the numbers that should be treated as signed numbers. An index may
+    also be negative to count from the end. By default, all numbers
+    are unsigned.
+
     Returns a list of :class:`Sequence<cgkit.sequence.Sequence>` objects.
     The sequences and the files within the sequences are sorted.
     """
@@ -2358,10 +2428,15 @@ def glob(name):
     globpattern = name
     if not globpattern.endswith("*"):
         globpattern += "*"
-        
+    
+    # Keep the pattern for calling fnmatch later
+    fnpattern = globpattern
+    
     # Replace number substitution pattern by wildcards (this might result
     # in files being reported that are actually not valid because they either
-    # contain strings instead of numbers or the padding is not as specified)
+    # contain strings instead of numbers or the padding is not as specified.
+    # But those invalid files will be filtered out later using the SeqString's
+    # fnmatch method)
     globpattern = globpattern.replace("#", "????")
     while 1:
         m = re.search(r"@+", globpattern)
@@ -2369,95 +2444,22 @@ def glob(name):
             break
         globpattern = "%s%s%s"%(globpattern[:m.start()], "?*", globpattern[m.end():])
         
-    # Create a regular expression to filter the glob result
-    regexp = []
-    s = name
-    while 1:
-        m = re.search(r"\*|#|@+", s)
-        if m is None:
-            regexp.append(re.escape(s))
-            break
-        p = m.group()
-        regexp.append(re.escape(s[:m.start()]))
-        if p=="*":
-            regexp.append(".*")
-        elif p=="#":
-            regexp.append("[0-9][0-9][0-9][0-9]")
-        else:
-            r = len(p)*"[0-9]"
-            r = "(%s|[1-9][0-9]{%s,})"%(r,len(p))
-            regexp.append(r)
-        s = s[m.end():]
-
-    regexp = "".join(regexp)
-    
     # Get a list of potential file names    
     fileNames = _glob.glob(globpattern)
     
     # Remove all directories
     fileNames = filter(lambda n: not os.path.isdir(n), fileNames)
     
-    # Remove files that don't match the regular expression
-    reg = re.compile(regexp)
-    fileNames = filter(lambda n: reg.match(n) is not None, fileNames)
-    
     # Remove files that don't have any number in their name (without ext)
     fileNames = filter(lambda n: SeqString(os.path.splitext(n)[0]).numCount()>0, fileNames)
+
+    # Convert the names to SeqString objects (actually tuples that can be passed to _buildSequences())
+    objects = [(SeqString(name,signedNums=signedNums),None) for name in fileNames]
     
-    return buildSequences(fileNames, assumeFiles=True)
+    # Remove files that don't match the input pattern
+    objects = [tup for tup in objects if tup[0].fnmatch(fnpattern)]
 
-
-# The following function is obsolete and replaced by the SeqTemplate class.
-#def numSubstitutionPatterns(pattern):
-#    """Return the number of substitution patterns inside a string.
-#    
-#    Returns the number of occurrences of a single '#' or a sequence of '@'
-#    character.
-#    """
-#    rexp = re.compile(r"#|@+")
-#    res = 0
-#    while 1:
-#        m = rexp.search(pattern)
-#        if m is None:
-#            break
-#        res += 1
-#        pattern = pattern[m.end():]
-#    return res
+    # Sort the file names
+    objects = sorted(objects, key=lambda tup: tup[0])
     
-# The following function is obsolete and replaced by the SeqTemplate class.
-#def replaceNums(pattern, nums):
-#    """Replace number patterns inside a string.
-#    
-#    pattern is a string that contains '#' or '@' characters. A single '#'
-#    represents a padded number with 4 digits whereas a sequence of '@'
-#    characters represents a number of that width. If a number is larger than
-#    the specified width, the final width will be larger as well (i.e. the
-#    number is not clipped).
-#    nums is a list of integers. For each number in the list, the pattern
-#    string must contain exactly one number substitution pattern.
-#    """
-#    if len(nums)==1:
-#        patternMsg = "pattern"
-#    else:
-#        patternMsg = "patterns"
-#        
-#    s = pattern
-#    for num in nums:
-#        n1 = s.find("#")
-#        n2 = s.find("@")
-#        if n1!=-1 and (n2==-1 or n1<n2):
-#            s = "%s%04d%s"%(s[:n1], num, s[n1+1:])
-#        elif n2!=-1 and (n1==-1 or n2<n1):
-#            n = 1
-#            while n2+n<len(s) and s[n2+n]=="@":
-#                n += 1
-#            sdef = "%%s%%0%dd%%s"%n
-#            s = sdef%(s[:n2], num, s[n2+n:])
-#        else:
-#            raise ValueError("No matching number substitution pattern found: %s (expected %s %s)"%(pattern, len(nums), patternMsg))
-#            
-#    if s.find("#")!=-1 or s.find("@")!=-1:
-#        raise ValueError("Too many number substitution patterns: %s (only expected %s %s)"%(pattern,len(nums), patternMsg))
-#        
-#    return s
-
+    return _buildSequences(objects, assumeFiles=True)
